--- a/Views/Home/TaskTable.cshtml
+++ b/Views/Home/TaskTable.cshtml
@@ -141,6 +141,7 @@
                                 <option>Все ГИПы</option>
                                 @foreach (string staff in Model.ollGip)
                                 {
+                                    if (staff == null) continue;
                                     <option>@staff</option>
                                 }
                             </select>
