--- a/Views/Shared/TaskTableTest.cshtml
+++ b/Views/Shared/TaskTableTest.cshtml
@@ -103,7 +103,7 @@
         if (i == 0)
         {
             <tr id="title"><th style="text-align:left" colspan="13">Задачи на сегодня</th></tr>
-            foreach (Task task in Model.task4TableTasks.Where(p => p.status != "Выполнена").Where(p => p.date.Date <= DateTime.Now.Date).OrderBy(p => p.date.Date).OrderBy(p => p.priority))
+            foreach (Task task in Model.task4TableTasks.Where(p => p.status != "Выполнена").Where(p => p.date.Date <= DateTime.Now.AddHours(-5).Date).OrderBy(p => p.date.Date).OrderBy(p => p.priority))
             {
                 //if (Model.staffNames.Contains(task.supervisor) && task.supervisor != ViewBag.RoleName && task.recipient != null) continue;
                 @if (task.liteTask == true)
@@ -304,7 +304,7 @@
         if (i == 1)
         {
             <tr id="title"><th style="text-align:left" colspan="13">Предстоящие задачи</th></tr>
-            foreach (Task task in Model.task4TableTasks.Where(p => p.status != "Выполнена").Where(p => p.date.Date > DateTime.Now.Date).OrderBy(p => p.date.Date).OrderBy(p => p.priority))
+            foreach (Task task in Model.task4TableTasks.Where(p => p.status != "Выполнена").Where(p => p.date.Date > DateTime.Now.AddHours(-5).Date).OrderBy(p => p.date.Date).OrderBy(p => p.priority))
             {
                 //if (Model.staffNames.Contains(task.supervisor) && task.supervisor != ViewBag.RoleName && task.recipient != null) continue;
                 @if (task.liteTask == true)
