почти готовы фильтры

--- a/ClientApp/src/main.scss
+++ b/ClientApp/src/main.scss
@@ -26,6 +26,13 @@ h1, .h1 {
     font-weight: 700;
 }
 
+h2, .h2 {
+    font-size: 19px;
+    line-height: 1.2;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+
 nav ul, nav li {
     margin: 0;
     padding: 0;
